--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Hello android</h1>
+  </body>
 </html>
