--- a/index.html
+++ b/index.html
@@ -6,10 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/bb40ba613a.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Hello android</h1>
+    <head>
+      <nav class="container">
+        <div class="nav-heading">
+          <h3>Influencer products</h3>
+        </div>
+        <div>
+          <ul class="nav-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Sign up</a></li>
+            <li><a href="#">Log in</a></li>
+            <li>
+              <a href="#"><i class="fas fa-search"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </head>
   </body>
 </html>
