--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <head>
+    <header>
       <nav class="container">
         <div class="nav-heading">
           <h3>Influencer products</h3>
@@ -36,6 +36,25 @@
           </ul>
         </div>
       </nav>
-    </head>
+    </header>
+
+    <main>
+      <section class="top-container">
+        <div class="top-content">
+          <h1>Start your Journey as Influencer</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
+            ut? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Voluptate, ut?
+          </p>
+          <a href="#" target="_blank" class="top-link link-arrow"
+            >Prebook now</a
+          >
+        </div>
+        <div class="top-photo">
+          <img src="images/main-camera.png" alt="Camera photo" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
