--- a/index.html
+++ b/index.html
@@ -55,6 +55,212 @@
           <img src="images/main-camera.png" alt="Camera photo" />
         </div>
       </section>
+
+      <section class="grid-layout">
+        <div class="grid-heading">
+          <h2>Popular Collection</h2>
+        </div>
+        <div class="grid-items">
+          <div class="grid-item">
+            <div class="grid-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="grid-desc">
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>4.00</span>
+              </div>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="grid-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="grid-desc">
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>4.00</span>
+              </div>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="grid-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="grid-desc">
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>4.00</span>
+              </div>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="grid-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="grid-desc">
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>4.00</span>
+              </div>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="grid-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="grid-desc">
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>4.00</span>
+              </div>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="grid-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="grid-desc">
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>4.00</span>
+              </div>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="grid-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="grid-desc">
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>4.00</span>
+              </div>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="grid-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="grid-desc">
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>4.00</span>
+              </div>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="grid-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="grid-desc">
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>4.00</span>
+              </div>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
