--- a/index.html
+++ b/index.html
@@ -56,211 +56,230 @@
         </div>
       </section>
 
-      <section class="grid-layout">
-        <div class="grid-heading">
-          <h2>Popular Collection</h2>
+      <section>
+        <div class="grid-layout">
+          <div class="grid-heading">
+            <h2>Popular Collection</h2>
+          </div>
+          <div class="grid-items">
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="grid-items">
-          <div class="grid-item">
-            <div class="grid-img">
-              <img src="images/tripod.png" alt="" />
-            </div>
-            <div class="grid-desc">
-              <h2>Flex Tripod</h2>
-              <h3>$50.48</h3>
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span>4.00</span>
-              </div>
-              <p>
-                Wordwide shifting <br />
-                available <br />
-                Buyers protection possible!
-              </p>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="grid-img">
-              <img src="images/tripod.png" alt="" />
-            </div>
-            <div class="grid-desc">
-              <h2>Flex Tripod</h2>
-              <h3>$50.48</h3>
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span>4.00</span>
-              </div>
-              <p>
-                Wordwide shifting <br />
-                available <br />
-                Buyers protection possible!
-              </p>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="grid-img">
-              <img src="images/tripod.png" alt="" />
-            </div>
-            <div class="grid-desc">
-              <h2>Flex Tripod</h2>
-              <h3>$50.48</h3>
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span>4.00</span>
-              </div>
-              <p>
-                Wordwide shifting <br />
-                available <br />
-                Buyers protection possible!
-              </p>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="grid-img">
-              <img src="images/tripod.png" alt="" />
-            </div>
-            <div class="grid-desc">
-              <h2>Flex Tripod</h2>
-              <h3>$50.48</h3>
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span>4.00</span>
-              </div>
-              <p>
-                Wordwide shifting <br />
-                available <br />
-                Buyers protection possible!
-              </p>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="grid-img">
-              <img src="images/tripod.png" alt="" />
-            </div>
-            <div class="grid-desc">
-              <h2>Flex Tripod</h2>
-              <h3>$50.48</h3>
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span>4.00</span>
-              </div>
-              <p>
-                Wordwide shifting <br />
-                available <br />
-                Buyers protection possible!
-              </p>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="grid-img">
-              <img src="images/tripod.png" alt="" />
-            </div>
-            <div class="grid-desc">
-              <h2>Flex Tripod</h2>
-              <h3>$50.48</h3>
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span>4.00</span>
-              </div>
-              <p>
-                Wordwide shifting <br />
-                available <br />
-                Buyers protection possible!
-              </p>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="grid-img">
-              <img src="images/tripod.png" alt="" />
-            </div>
-            <div class="grid-desc">
-              <h2>Flex Tripod</h2>
-              <h3>$50.48</h3>
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span>4.00</span>
-              </div>
-              <p>
-                Wordwide shifting <br />
-                available <br />
-                Buyers protection possible!
-              </p>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="grid-img">
-              <img src="images/tripod.png" alt="" />
-            </div>
-            <div class="grid-desc">
-              <h2>Flex Tripod</h2>
-              <h3>$50.48</h3>
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span>4.00</span>
-              </div>
-              <p>
-                Wordwide shifting <br />
-                available <br />
-                Buyers protection possible!
-              </p>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="grid-img">
-              <img src="images/tripod.png" alt="" />
-            </div>
-            <div class="grid-desc">
-              <h2>Flex Tripod</h2>
-              <h3>$50.48</h3>
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <span>4.00</span>
-              </div>
-              <p>
-                Wordwide shifting <br />
-                available <br />
-                Buyers protection possible!
-              </p>
-            </div>
-          </div>
+        <div class="grid-button">
+          <a class="link-arrow" href="#" target="_blank">See More</a>
         </div>
       </section>
     </main>
+
+    <footer>
+      <h2>Influencer Products</h2>
+      <p>
+        Copyright &copy; influencer products <br />
+        all right reserved
+      </p>
+      <div>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-youtube-square"></i>
+      </div>
+    </footer>
   </body>
 </html>
