All photo and text set

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <nav class="container">
         <div class="nav-heading">
-          <h3>Influencer products</h3>
+          <h3>Wildlife Photography Products</h3>
         </div>
         <div>
           <ul class="nav-list">
@@ -41,34 +41,123 @@
     <main>
       <section class="top-container">
         <div class="top-content">
-          <h1>Start your Journey as Influencer</h1>
+          <h1>Be a Professional Wildlife Photographar</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
-            ut? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Voluptate, ut?
+            Becoming a wildlife photographer and turning a passion into a
+            profession that pays the bills is a puzzle with many pieces.The
+            first requisite to becoming a wildlife photographer either part-time
+            or full-time is that you have a passion for being out in nature and
+            a love of animals. The second is that you're already a pretty decent
+            photographer and you live to get back out in the field to shoot.
           </p>
-          <a href="#" target="_blank" class="top-link link-arrow"
-            >Prebook now</a
-          >
+          <a href="#" target="_blank" class="top-link link-arrow">Learn More</a>
         </div>
         <div class="top-photo">
-          <img src="images/main-camera.png" alt="Camera photo" />
+          <img src="images/model.jpg" alt="Camera photo" />
         </div>
       </section>
 
       <section>
         <div class="grid-layout">
           <div class="grid-heading">
-            <h2>Popular Collection</h2>
+            <h2>Essential Photography Gear</h2>
           </div>
           <div class="grid-items">
             <div class="grid-item">
               <div class="grid-img">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/binocular.jpg" alt="" />
               </div>
               <div class="grid-desc">
-                <h2>Flex Tripod</h2>
+                <h2>Binocular</h2>
+                <h3>$80.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>5.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/tripod.jpg" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Tripod</h2>
+                <h3>$30.40</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.50</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/drone.png" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Drone</h2>
+                <h3>$500.60</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>5.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/telephoto-lens.jpg" alt="" />
+              </div>
+              <div class="grid-desc">
+                <h2>Telephoto Lens</h2>
                 <h3>$50.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>4.50</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/airpod.png" alt="airpod photo" />
+              </div>
+              <div class="grid-desc">
+                <h2>Airpod</h2>
+                <h3>$20.48</h3>
                 <div class="rating">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -86,11 +175,33 @@
             </div>
             <div class="grid-item">
               <div class="grid-img">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/mic.png" alt="mic photo" />
               </div>
               <div class="grid-desc">
-                <h2>Flex Tripod</h2>
-                <h3>$50.48</h3>
+                <h2>Mic</h2>
+                <h3>$40.48</h3>
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <span>5.00</span>
+                </div>
+                <p>
+                  Wordwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+            <div class="grid-item">
+              <div class="grid-img">
+                <img src="images/action.png" alt="action camera" />
+              </div>
+              <div class="grid-desc">
+                <h2>Action Camera</h2>
+                <h3>$500.48</h3>
                 <div class="rating">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -108,11 +219,11 @@
             </div>
             <div class="grid-item">
               <div class="grid-img">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/single-light.png" alt="Green Screen" />
               </div>
               <div class="grid-desc">
-                <h2>Flex Tripod</h2>
-                <h3>$50.48</h3>
+                <h2>Green Screen</h2>
+                <h3>$24.48</h3>
                 <div class="rating">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -130,121 +241,11 @@
             </div>
             <div class="grid-item">
               <div class="grid-img">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/camera.png" alt="Vlogging Camera" />
               </div>
               <div class="grid-desc">
-                <h2>Flex Tripod</h2>
-                <h3>$50.48</h3>
-                <div class="rating">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span>4.00</span>
-                </div>
-                <p>
-                  Wordwide shifting <br />
-                  available <br />
-                  Buyers protection possible!
-                </p>
-              </div>
-            </div>
-            <div class="grid-item">
-              <div class="grid-img">
-                <img src="images/tripod.png" alt="" />
-              </div>
-              <div class="grid-desc">
-                <h2>Flex Tripod</h2>
-                <h3>$50.48</h3>
-                <div class="rating">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span>4.00</span>
-                </div>
-                <p>
-                  Wordwide shifting <br />
-                  available <br />
-                  Buyers protection possible!
-                </p>
-              </div>
-            </div>
-            <div class="grid-item">
-              <div class="grid-img">
-                <img src="images/tripod.png" alt="" />
-              </div>
-              <div class="grid-desc">
-                <h2>Flex Tripod</h2>
-                <h3>$50.48</h3>
-                <div class="rating">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span>4.00</span>
-                </div>
-                <p>
-                  Wordwide shifting <br />
-                  available <br />
-                  Buyers protection possible!
-                </p>
-              </div>
-            </div>
-            <div class="grid-item">
-              <div class="grid-img">
-                <img src="images/tripod.png" alt="" />
-              </div>
-              <div class="grid-desc">
-                <h2>Flex Tripod</h2>
-                <h3>$50.48</h3>
-                <div class="rating">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span>4.00</span>
-                </div>
-                <p>
-                  Wordwide shifting <br />
-                  available <br />
-                  Buyers protection possible!
-                </p>
-              </div>
-            </div>
-            <div class="grid-item">
-              <div class="grid-img">
-                <img src="images/tripod.png" alt="" />
-              </div>
-              <div class="grid-desc">
-                <h2>Flex Tripod</h2>
-                <h3>$50.48</h3>
-                <div class="rating">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span>4.00</span>
-                </div>
-                <p>
-                  Wordwide shifting <br />
-                  available <br />
-                  Buyers protection possible!
-                </p>
-              </div>
-            </div>
-            <div class="grid-item">
-              <div class="grid-img">
-                <img src="images/tripod.png" alt="" />
-              </div>
-              <div class="grid-desc">
-                <h2>Flex Tripod</h2>
-                <h3>$50.48</h3>
+                <h2>Vlogging Camera</h2>
+                <h3>$650.48</h3>
                 <div class="rating">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -261,9 +262,10 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="grid-button">
-          <a class="link-arrow" href="#" target="_blank">See More</a>
+
+          <div class="grid-button">
+            <a class="link-arrow" href="#" target="_blank">See More</a>
+          </div>
         </div>
       </section>
     </main>
