all part finished

--- a/index.html
+++ b/index.html
@@ -268,12 +268,24 @@
           </div>
         </div>
       </section>
+
+      <section>
+        <div class="photo-competition">
+          <h2>Photo Competition</h2>
+          <p>
+            Enter our photography competition for the chance to win some
+            incredible prizes including a $12000 luxury safari for two, a camera
+            and lens combination perfect for nature photography and more!
+          </p>
+          <a href="#" target="_blank" class="link-arrow">Find Out More</a>
+        </div>
+      </section>
     </main>
 
     <footer>
-      <h2>Influencer Products</h2>
+      <h2>Wildlife Photography Products</h2>
       <p>
-        Copyright &copy; influencer products <br />
+        Copyright &copy; wildlife photography products <br />
         all right reserved
       </p>
       <div>
